# CustomMemoryAllocator

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
cmake/: CustomMemoryAllocatorsConfig.cmake.in
include/: allocator.h  constants.h  i_allocator.h  linear_allocator.h  stl_allocator.h  utils.h
include/heap/: linear_allocator.h
include/static/: static_linear_allocator.h  static_pool_allocator.h
include/thread_local/: thread_local_allocator.h
src/: linear_allocator.cpp  main.cpp
